# android_p_no_sdkapi_support

./: .gitmodules  README.MD  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/support_p/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/support_p/: MainActivity.java  ReflectionHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/support_p/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/androidTest/java/com/guolei/lib/pcompat/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib_method_1/src/androidTest/java/com/guolei/support_p_java/: ExampleInstrumentedTest.java
lib_method_1/src/main/: AndroidManifest.xml
lib_method_1/src/main/java/com/guolei/support_p_java/: PCompat.java
lib_method_1/src/main/res/values/: strings.xml
lib_method_1/src/test/java/com/guolei/support_p_java/: ExampleUnitTest.java
lib_method_2/: CMakeLists.txt  build.gradle
lib_method_2/src/androidTest/java/com/guolei/support_p_native/: ExampleInstrumentedTest.java
lib_method_2/src/main/: AndroidManifest.xml
lib_method_2/src/main/cpp/: native.cpp  v_hook.h
lib_method_2/src/main/java/com/guolei/support_p_native/: PCompat.java
lib_method_2/src/main/res/values/: strings.xml
lib_method_2/src/test/java/com/guolei/support_p_native/: ExampleUnitTest.java
(+3 files in other folders)
